
[project]
name = "msrs"
authors = [{name = "Thibaut Guénédal", email = "thibautguenedal@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = ["version", "description"]
keywords = ["spaced-repetition"]
requires-python = ">=3.1"
dependencies = [
  "pyyaml ==6.0.2",
  "fsrs >=5.1,<6",
]

[project.urls]
Home = "https://github.com/entibo/monospaced-repetition"

[project.scripts]
msrs = "msrs:main"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
